# scenecut-extractor

./: .all-contributorsrc  .gitignore  CHANGELOG.md  HISTORY.md  LICENSE.md  README.md  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: index.html  scenecut_extractor.html  search.js
scenecut_extractor/: __init__.py  __main__.py  _scenecut_extractor.py
src/scenecut_extractor/: __init__.py  __main__.py  _scenecut_extractor.py
test/: test.py
tests/: test_scenecut_extractor.py
